# TZ_EM_Jun_Python

./: .gitignore  README.md  main.py  pyproject.toml
src/: book.py  book_library.py  book_library_service.py  data_storage_service.py
test/: test_book.py  test_book_library.py
